# shaystack module
# See the accompanying LICENSE file.
# (C) 2021 Engie Digital
[metadata]
name = shaystack
description = Implementation of Haystack Project Specification
description-file = README.md
description-content-type = text/markdown ; charset=UTF-8
author = Philippe PRADOS
author-email = support@prados.fr
maintener = Philippe PRADOS
maintener-email = support@prados.fr
contact = shift-4-haystack
contact-email = shaystack@prados.fr
license = BSD
# FIXME: update location
home-page = https://github.com/pprados/shaystack
project_urls =
    Bug Tracker = https://github.com/pprados/shaystack/issues
    Documentation = https://pprados.github.io/shaystack/
    Source Code = https://github.com/pprados/shaystack
classifier =
    Development Status :: 4 - Beta
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Information Analysis
    Topic :: Software Development :: Libraries :: Python Modules
keywords =
    haystack
install_requires =
    pyparsing
    pytz
    iso8601
    six
    accept_types
    overrides
    tzlocal
    pint
    click
    click_pathlib

[files]
packages =
    shaystack
    app
data_files =
    app/static = app/static/*
    sample = sample/*

[entry_points]
console_scripts =
    shaystack = app.__init__:main
    shaystack_import_db = shaystack.providers.import_db:main
    shaystack_import_s3 = shaystack.providers.import_s3:main

;[pbr]
;skip_authors = true
;skip_changelog = true
;skip_git_sdist = true
;skip_reno = true


[extras]
dev =
    python-dotenv
    zappa
    pytype
    ninja
    flake8
    pylint
    nose
    twine
    mock
    nose
    coverage
    psycopg2
    supersqlite
    pdoc3

flask =
    flask
    flask-cors

graphql =
    flask
    flask-cors
    graphene>=2.0
    flask_graphql

lambda =
    flask
    flask-cors
    zappa