# shaystack module
# See the accompanying LICENSE file.
# (C) 2021 Engie Digital
[metadata]
name = shaystack
description = Implementation of Haystack Project Specification
description-file = README.md
description-content-type = text/markdown ; charset=UTF-8
author = Philippe PRADOS
author-email = support@prados.fr
maintener = Philippe PRADOS
maintener-email = shaystack@prados.fr
contact = shift-4-haystack
contact-email = shaystack@prados.fr
license = BSD
home-page = https://github.com/engie-group/shaystack
project_urls =
    Bug Tracker = https://github.com/engie-group/shaystack/issues
    Documentation = https://engie-group.github.io/shaystack/
    Source Code = https://github.com/engie-group/shaystack
classifier =
    Development Status :: 4 - Beta
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Information Analysis
    Topic :: Software Development :: Libraries :: Python Modules
keywords =
    haystack
install_requires =
    pyparsing==2.4.7
    pytz==2021.1
    iso8601==0.1.14
    six
    accept_types
    overrides==6.0.0
    tzlocal==2.1
    pint==0.17
    click>=8.0

[files]
packages =
    shaystack
    app
data_files =
    app/static = app/static/*
    sample = sample/*

[entry_points]
console_scripts =
    shaystack = app.main:main
    shaystack_graphql = app.schema_graphql:main
    shaystack_import_db = shaystack.providers.import_db:main
    shaystack_repl = shaystack.providers.repl_db:main

;[pbr]
;skip_authors = true
;skip_changelog = true
;skip_git_sdist = true
;skip_reno = true


[extras]
dev =
    python-dotenv
    zappa==0.54.2
    ninja>=1.10.0
    mypy>=0.900
    flake8==3.9.1
    itsdangerous==2.0.1
    Jinja2>=2.11.9
    pylint==2.8.2
    pytest>=7.0.0
    twine==3.4.1
    mock==4.0.3
    coverage==5.5
    psycopg2>=2.9
    PyMySQL==1.0.2
    pymongo==3.11.4
    pdoc3==0.9.2
    pip-licenses
    types-pytz
    types-click
    boto3-stubs
    pymongo-stubs
    types-Flask-Cors
    graphene-stubs
    types-PyMySQL
    types-mock
    types-Flask
    types-tzlocal
    types-python-dateutil
    types-six
    types-requests
    types-psycopg2

flask =
    flask==2.1.0
    flask-cors==3.0.10
    itsdangerous==2.0.1
    Jinja2>=2.11.9

graphql =
    flask==2.1.0
    flask-cors==3.0.10
    graphene==3.0
    graphql-server==3.0.0b4
    promise==2.3

lambda =
    flask==2.1.0
    flask-cors==3.0.10
    itsdangerous==2.0.1
    Jinja2>=2.11.9
    zappa